# nexusbridge

./: .gitignore  CHANGELOG.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: build-workers.yml  ci.yml  publish-pypi.yml
docs/: BUILD.md  BUILDER_SUMMARY.md  CI-CD.md  QUICKSTART.md
examples/: gui_config.json  handlers.py  simple_handlers.py
src/nexusbridgehub/: __init__.py  auth.py  builder.py  version_info.txt  worker_app.py  worker_gui.py
