[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusbridgehub"
dynamic = ["version"]
description = "Universal bridge for distributed bot control: bot -> server -> user worker"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "rxzwu", email = "gorexevidep023@gmail.com"}
]
maintainers = [
    {name = "rxzwu", email = "gorexevidep023@gmail.com"}
]
keywords = [
    "websocket",
    "bot",
    "distributed",
    "telegram",
    "bridge",
    "remote",
    "worker",
    "jwt",
    "asyncio",
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "build>=1.2",
    "twine>=5.0",
]
builder = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/rxzwu/nexusbridgehub"
Documentation = "https://github.com/rxzwu/nexusbridgehub/blob/main/README.ru.md"
Repository = "https://github.com/rxzwu/nexusbridgehub"
Issues = "https://github.com/rxzwu/nexusbridgehub/issues"
Changelog = "https://github.com/rxzwu/nexusbridgehub/blob/main/CHANGELOG.md"

[project.scripts]
nexusbridgehub-server = "nexusbridgehub.server:main_cli"
nexusbridgehub-worker = "nexusbridgehub.worker_app:main_cli"
nexusbridgehub = "nexusbridgehub.builder:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "nexusbridgehub.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
